// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card it works default 1`] = `
.c0 {
  max-width: 640px;
  margin: 80px auto;
  padding: 24px;
  border-radius: 8px;
  box-shadow: 0px 4px 8px rgba(0,0,0,0.25);
}

<div
  class="c0"
>
  <p>
    Lorem ipsum dolor
  </p>
</div>
`;

exports[`Card it works with title 1`] = `
.c0 {
  max-width: 640px;
  margin: 80px auto;
  padding: 24px;
  border-radius: 8px;
  box-shadow: 0px 4px 8px rgba(0,0,0,0.25);
}

.c1 {
  font-size: 24px;
  line-height: 28px;
  font-weight: 700;
  margin: 0 0 24px;
  font-size: 28px;
  line-height: 32px;
  font-weight: 700;
}

<div
  class="c0"
>
  <h3
    class="c1"
  >
    Card title
  </h3>
  <p>
    Lorem ipsum dolor
  </p>
</div>
`;
